# atlas-monorepo

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  PLAN.md  README.md  atlas.hcl  justfile
db/db-alembic/k8s/overlays/production/: kustomization.yaml
db/db-alembic/k8s/resources/: cluster.yaml  job.yaml  serviceaccount.yaml
db/db-sql/k8s/overlays/production/: kustomization.yaml
db/db-sql/k8s/resources/: cluster.yaml  job.yaml  serviceaccount.yaml
db/db-sql/migrations/: 20260502201141_add_widgets_description.sql  20260502201143_add_widget_tags.sql  20260502201144_add_widgets_name_idx.sql  atlas.sum
db/db1/k8s/overlays/production/: kustomization.yaml
db/db1/k8s/resources/: cluster.yaml  job.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml
db/db1/migrations/: 20260502120000_init.sql  atlas.sum
k8s/apps/: kustomization.yaml
k8s/apps/applications/: app.yaml
k8s/apps/applications/overlays/production/: appset.yaml
k8s/apps/argocd/overlays/production/: kustomization.yaml
k8s/apps/argocd/resources/: kustomization.yaml
k8s/apps/database-sets/: appset.yaml
k8s/apps/databases/overlays/production/: appset.yaml  kustomization.yaml
k8s/apps/postgres/overlays/production/: kustomization.yaml
k8s/apps/postgres/resources/: kustomization.yaml
k8s/cluster/production/: app.yaml  kustomization.yaml
python/api/: Dockerfile  pyproject.toml
python/api/alembic/: env.py
python/api/alembic/versions/: a393d4108f45_init.py  d320bafa4221_add_users_bio.py
python/api/src/api/: models.py
